--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.10.8",
     "postcss-discard-overridden": "^5.1.0",
     "vant": "^2.12.44",
     "vue": "^2.6.14",
