--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.8",
     "postcss": "^8.4.8",
     "postcss-pxtorem": "5.1.1",
+    "socket.io-client": "4",
     "vant": "2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
