--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.8",
+    "highlight.js": "^11.5.0",
     "postcss": "^8.4.8",
     "postcss-pxtorem": "5.1.1",
     "socket.io-client": "4",
